Fixed error in category

--- a/train exif is this way/chall.yaml
+++ b/train exif is this way/chall.yaml
@@ -1,6 +1,6 @@
 challenge:
   author: "Tevel"
-  category: Forensics
+  category: OSINT
   description: "I need help finding the ____"
   difficulty: "Hard"
   discord: "trevelling"
