--- a/challenges/forensics/Dimensional/challenge.yml
+++ b/challenges/forensics/Dimensional/challenge.yml
@@ -5,7 +5,7 @@
 name: "Dimensional"
 author: "Syn Kit"
 category: Forensics
-description: I got this image, but it seems to be cut off.. It's original dimensions were 223 x 226.. How am I supposed to un-crop an image anyway?
+description: I got this image, but it seems to be cut off.. Its original dimensions were 223 x 226.. How am I supposed to un-crop an image anyway?
 value: 100
 type: standard
 
