--- a/challenges/web/Dockerization/challenge.yml
+++ b/challenges/web/Dockerization/challenge.yml
@@ -2,7 +2,12 @@ name: "Dockerization"
 author: "bowen"
 category: web
 difficulty: medium
-description: This is a sample description
+description: |
+    Running the challenges locally is a great way to figure out what's going on.
+    Most web challenges provide Dockerfiles to get the challenge up and running
+    on your machine. The objective is simple: download Docker and deploy this
+    challenge on your computer to get the flag - unless you love torture and
+    decide to reverse engineer the shared object file instead.
 value: 250
 type: standard
 
