--- a/challenges/forensics/something stanky/challenge.yml
+++ b/challenges/forensics/something stanky/challenge.yml
@@ -2,7 +2,7 @@ challenge:
   author: "Kairos"
   category: Forensics
   description: "In the midst of my daydream, I imagined some weird, stanky network traffic on my computer. Who knew that my daze-induced hallucinations would come true? I managed to capture some stuff before it disappeared, but I can't make heads or tails of it."
-    difficulty: "hard"
+    difficulty: "medium"
   discord: "kairostay"
 
   files:
