misc: set cost of hint to 20

--- a/challenges/re/dontcrackme/challenge.yml
+++ b/challenges/re/dontcrackme/challenge.yml
@@ -47,4 +47,7 @@ files:
 # Can be removed if unused
 # Accepts dictionaries or strings
 hints:
-    - Strings strings strings...
+    - {
+        content: "Strings strings strings...",
+        cost: 20
+    }
