--- a/challenges/re/ladybug/challenge.yml
+++ b/challenges/re/ladybug/challenge.yml
@@ -2,11 +2,11 @@
 # other tools to install and deploy your challenge.
 
 # Required sections
-name: "dontcrackme"
+name: "Lad(y)ebug"
 author: "whywhy"
 category: reverse
-difficulty: medium
-description: I can't make sense of what this does... maybe there's another way to do this?
+difficulty: hard
+description: Looks like this program is aware of debuggers! Can we convince it to play nice?
 value: 100
 type: standard
 
@@ -29,25 +29,27 @@ connection_info: nc hostname 12345
 # Accepts strings or dictionaries of CTFd API data
 flags:
     # A static case sensitive flag
-    - YCEP24{H4VE_Y0U_TR13D_STRINGS}
+    - YCEP24{BR34KP01N7S_4RE_US3FUL}
 
 # Topics are used to help tell what techniques/information a challenge involves
 # They are generally only visible to admins
 # Accepts strings
 topics:
     - reverse
+    - debuggers
 
 # Provide paths to files from the same directory that this file is in
 # Accepts strings
 files:
-    - dist/chall
+    - dist/chall.exe
 
 # Hints are used to give players a way to buy or have suggestions. They are not
 # required but can be nice.
 # Can be removed if unused
 # Accepts dictionaries or strings
 hints:
+    - The output register in x64 calling convention is the RAX register.
     - {
-        content: "Strings strings strings...",
-        cost: 20
+        content: "Did you know? Breakpoints can pause a debugged program's execution when the line is reached. Debuggers are able to modify register values of the program. ",
+        cost: 25
     }
