Update hint for train exif is this way

--- a/train exif is this way/chall.yaml
+++ b/train exif is this way/chall.yaml
@@ -13,5 +13,5 @@ challenge:
 
   hints:
     - cost: 20
-      description: "I know how to spell..."
+      description: "The title looks funky.. maybe its hinting to a tool..?"
       requirements: null
