feat: [Pwn, Easy] - CLI + im sorry i forgot to GIT ADD the 149 lines

--- a/challenges/pwn/Cheese Shop/challenge.yml
+++ b/challenges/pwn/Cheese Shop/challenge.yml
@@ -1,6 +1,7 @@
 name: "Cheese Shop"
 author: "Syn Kit"
 category: Pwn
+difficulty: Easy
 description: "My friend loves cheese, so he opened a cheese shop! It's their grand opening today, come take a look! \nps I heard he sells flags too, but they're exclusive :( \nCan you help me get one?"
 value: 100
 type: standard
