Chore: Removed unescaped invrted commas

--- a/challenges/osint/remnants of a failed influencer/challenge.yml
+++ b/challenges/osint/remnants of a failed influencer/challenge.yml
@@ -10,5 +10,5 @@ flags:
 
 hints:
   - cost: 20
-    description: "With Jeremy's growing fanbase, Jeremy felt the need to differentiate himself as "the real" deal from other potential impersonators who plan to use his power and influence for their malicious intents."
+    description: "With Jeremy's growing fanbase, Jeremy felt the need to differentiate himself as THE REAL deal from other potential impersonators who plan to use his power and influence for their malicious intents."
     requirements: null
