--- a/challenges/crypto/playfair not unfair/challenge.yml
+++ b/challenges/crypto/playfair not unfair/challenge.yml
@@ -13,6 +13,7 @@ topic:
     - Playfair Cipher
 
 hints:
-    - {
-        This cipher was invented in the 19th century and was used by the British Army during World War I and by the Allies during World War II for tactical purposes.
+    {
+        - This cipher was invented in the 19th century and was used by the British Army during World War I and by the Allies during World War II for tactical purposes.
+        - Or it could even be just the name itself!
     }
