Crypto Easy - Hungry hungry hippo + clean up crew work for some challs (#23)
* feat: add forensics hard - something missing

* feat: add easy crypto chall

* chore: fix formats of some challs

--- a/challenges/crypto/Barcode Baffler/challenge.yml
+++ b/challenges/crypto/Barcode Baffler/challenge.yml
@@ -12,6 +12,6 @@ topics:
     - Barcode encryption
 
 hints:
-    - {
-        My friend said something that goes like xing or zing, I don't know, sounds weird (10 points)
-    }
+    - cost: 10
+    description: "My friend said something that goes like xing or zing, I don't know, sounds weird"
+    requirements: null
