--- a/challenges/web/Magic-Table/challenge.yml
+++ b/challenges/web/Magic-Table/challenge.yml
@@ -1,19 +1,26 @@
-name: "Magic Table"
-author: "bowen"
-category: web
-difficulty: hard
-description: |
+challenge:
+  name: "Magic Table"
+  author: "bowen"
+  category: web
+  difficulty: hard
+  description: |
     Hey I stumbled across this periodic table that checks
     if two unequal elements are equal?! Could you please
     please please please help me get the flag?
-value: 250
-type: standard
+  value: 250
+  type: standard
 
-flags:
+  flags:
     - YCEP24{php_w34k_7yp3_c0mp4r150n5}
 
-topics:
+  topics:
     - web exploitation
 
-files:
+  files:
     - dist/MagicTable.zip
+
+services:
+  Magic-Table:
+    name: "Magic-Table"
+    path: service
+    port: '80'
