feat: update magician to insane

--- a/challenges/re/magician/challenge.yml
+++ b/challenges/re/magician/challenge.yml
@@ -5,7 +5,7 @@
 name: "Magician"
 author: "whywhy"
 category: reverse
-difficulty: hard
+difficulty: insane
 description: For today's magic trick, this program is going to... DISAPPEAR?!?!?!
 value: 100
 type: standard
