--- a/challenges/forensics/pachinko/challenge.yml
+++ b/challenges/forensics/pachinko/challenge.yml
@@ -2,8 +2,8 @@ challenge:
   author: "Jun Jie"
   category: Forensics
   description: "Come one come all! the pachinko machine is open! Spin and claim your prize... That is if you can find it ;)"
-  difficulty: "easy"
-  discord: "mintylyy"
+  difficulty: "medium"
+  discord: "mintyly"
 
   files:
     - dist/pachinko.zip
