--- a/challenges/osint/lets go fishing/challenge.yml
+++ b/challenges/osint/lets go fishing/challenge.yml
@@ -5,6 +5,9 @@ challenge:
   difficulty: "Medium"
   discord: "Rordon Gamsay"
 
+files:
+  - link: dist/email.jpg
+
 hints:
   - something fishy must be going ahhhh! could it be the enggrish grammars? the email receipient?? the suspicious links?!
     
