Change difficulty for EatingPlanes from Medium to Hard

--- a/challenges/forensics/EatingPlanes/chall.yml
+++ b/challenges/forensics/EatingPlanes/chall.yml
@@ -2,7 +2,7 @@ challenge:
   author: "Ravin"
   category: Forensics
   description: "mmmmmm I love eating planessss.... Although, gotta remember to bite and chew my food and not swallow it whole!"
-  difficulty: "medium"
+  difficulty: "hard"
   discord: "p3rpl3x"
 
   files:
