--- a/challenges/crypto/playfair not unfair/challenge.yml
+++ b/challenges/crypto/playfair not unfair/challenge.yml
@@ -6,7 +6,7 @@ description: this message is specially sent from a country, to convey an importa
 difficulty: medium
 
 flag:
-    - YCEP24{heil_hitler}
+    - YCEP24{Singapore_0_Korea_7}
 
 hints:
     {
