--- a/challenges/osint/lets go fishing/challenge.yml
+++ b/challenges/osint/lets go fishing/challenge.yml
@@ -9,7 +9,7 @@ files:
   - dist/email.jpg
 
 hints:
-  - something super and obviously fishy must be going ahhhh! could it be the enggrish grammars? the email receipient?? the suspicious links?!
+  - hmm, what is the first thing should be looked out for when you first receive the email?
   
 flags:
   - YCEP24{Stripe1111@patrica.hostpilot.com}
