--- a/challenges/osint/lets go fishing/challenge.yml
+++ b/challenges/osint/lets go fishing/challenge.yml
@@ -1,7 +1,7 @@
 challenge:
   author: "Dion"
   category: OSINT
-  description: "fishing? hmm.. i think it's the wrong kind of fishing bro/sis" 
+  description: "fishing? hmm.. i think it's the wrong kind of fishing bro/sis its more of phishing ah. hmm specifics? email." 
   difficulty: "Medium"
   discord: "Rordon Gamsay"
 
