--- a/challenges/crypto/Timeless Secrets/challenge.yml
+++ b/challenges/crypto/Timeless Secrets/challenge.yml
@@ -6,7 +6,7 @@ and found a hidden cave entrance. Drawings on the wall telling stories of civili
 and, for some reason, the drawings consistently depicted scenes of being ABANDONED. There seems to be an additional piece of what seems to be a code too.
 'Y_srp}EnntrCaaee2is_sn_cslIteilPcds_{nshi4e_wt'
 
-difficulty: easy
+difficulty: Medium
 
 flags:
     -  YCEP24{In_ancient_sands_secrets_whisper_still}
