--- a/challenges/forensics/Stylish Doggo/challenge.yml
+++ b/challenges/forensics/Stylish Doggo/challenge.yml
@@ -2,7 +2,7 @@
 name: "Stylish Doggo"
 author: "Hazim"
 category: Forensics
-description: 
+description: "Unraveling secrets can be as simple as opening a plain text editor. Who knows what you might find?"
 difficulty: easy
 
 
