--- a/challenges/misc/pachinko/challenge.yml
+++ b/challenges/misc/pachinko/challenge.yml
@@ -1,6 +1,6 @@
 challenge:
   author: "Jun Jie"
-  category: Forensics
+  category: Misc
   description: "Come one come all! the pachinko machine is open! Spin and claim your prize... That is if you can find it ;)"
   difficulty: "medium"
   discord: "mintyly"
