--- a/challenges/osint/remnants of a failed influencer/challenge.yml
+++ b/challenges/osint/remnants of a failed influencer/challenge.yml
@@ -2,7 +2,7 @@ challenge:
   author: "Galen"
   category: osint
   description: "As I made my routine monthly visit to the library in search of the latest issue of "Young Scientist," I couldn't help but notice a faint sound of weeping coming from the help desk. Curious, I approached and glimpsed Jeremy, who appeared to be tearfully staring at an Instagram account. My attention was immediately grabbed by a peculiar image of his face plastered on a skateboard, featured as a post. I recently heard my favourite librarian Jeremy Ong Wei Jun used to be an aspiring influencer, before leaving his dreams in the dust, to become a librarian. Could we find out his favourite book to cheer him up? 
-  difficulty: "medium"
+  difficulty: "hard"
   discord: "galenious_"
     
 flags:
