chore: edit hints

--- a/challenges/crypto/playfair not unfair/challenge.yml
+++ b/challenges/crypto/playfair not unfair/challenge.yml
@@ -2,14 +2,13 @@
 name: "playfair not unfair"
 author: "Dion"
 category: Cryptography
-description: this message is specially sent from a country, to convey an important message to our late Mr Lee Kuan Yew
+description: this message is specially sent from a country, to convey an important message to our late Mr Lee Kuan Yew. Some said... `CRYPTO`?
 difficulty: medium
 
 flag:
     - YCEP24{SINGAPORE_IS_THE_BEST}
 
-hints:
-    {
-        - This cipher was invented in the 19th century and was used by the British Army during World War I and by the Allies during World War II for tactical purposes.
-        - or maybe it could be the name itself! :O
-    }
+ hints:
+    - cost: 20
+      description: "This cipher was invented in the 19th century and was used by the British Army during World War I and by the Allies during World War II for tactical purposes."
+      requirements: null
