chore: edit difficulty to medium

--- a/cookie/chall.yaml
+++ b/cookie/chall.yaml
@@ -2,7 +2,7 @@ challenge:
   author: "Tevel"
   category: Web
   description: "Cookie Monster wants all your cookiesssssssssss"
-  difficulty: "Easy"
+  difficulty: "Medium"
   discord: "trevelling"
 
   flags:
