chore: add hosted chall link

--- a/challenges/web/cookie/chall.yaml
+++ b/challenges/web/cookie/chall.yaml
@@ -1,7 +1,7 @@
 challenge:
   author: "Tevel"
   category: Web
-  description: "Cookie Monster wants all your cookiesssssssssss"
+  description: "Cookie Monster wants all your cookiesssssssssss\nhttps://cookie-monster-ycep24.vercel.app/"
   difficulty: "Medium"
   discord: "trevelling"
 
