--- a/challenges/crypto/based crypto/challenge.yml
+++ b/challenges/crypto/based crypto/challenge.yml
@@ -1,4 +1,4 @@
-name: "Barcode Baffler"
+name: "Based Crypto"
 author: "Yong Shyan"
 category: Cryptography
 description: A repeater has messed up my flag and split it into 4 parts! Help me to decode them please! Encoded parts of the flag include LFBUKUBSGR5VI===, aElzX0lzTg==, E5KF6VRTKJ4Q====, X0JBNTNEfQ==
