fix: refactor + containerize web challs

--- a/challenges/web/cookie-monster/challenge.yml
+++ b/challenges/web/cookie-monster/challenge.yml
@@ -15,3 +15,9 @@ challenge:
     - cost: 50
       description: "Some things are always in 'plain sight'!"
       requirements: null
+
+services:
+  Cookie-Monster:
+    name: "Cookie-Monster"
+    path: service
+    port: '5000'
