feat: added challenge URLs

--- a/challenges/web/SQLi/chall.yaml
+++ b/challenges/web/SQLi/chall.yaml
@@ -2,7 +2,13 @@ name: "SQLi"
 author: "dakshthapar"
 category: Web
 difficulty: Medium
-description: My Friend has created a website for his company. He has asked me to test it for any vulnerabilities. Can you help me out? I have a feeling that it is vulnerable to SQL Injection.
+description: |
+  My Friend has created a website for his company.
+  He has asked me to test it for any vulnerabilities.
+  Can you help me out? I have a feeling that it is
+  vulnerable to SQL Injection.
+
+  http://challs.ycep24.nullsecsig.com:8771/
 value: 300
 type: standard
 
