--- a/challenges/pwn/Baby Pwn/challenge.yml
+++ b/challenges/pwn/Baby Pwn/challenge.yml
@@ -3,10 +3,10 @@ author: "Syn Kit"
 category: Pwn
 difficulty: Medium
 description: "I made a console app that greets users! Surely it's secure, right?"
-value: 100
+value: 500
 type: standard
 
-connection_info: nc hostname 12310
+connection_info: nc challs.ycep24.nullsecsig.com 9112
 
 flags:
     - YCEP24{bUff3r_0v3rf10w0_AAAAAAAAAA}
