--- a/challenges/forensics/Galvanised Square Steel/challenge.yml
+++ b/challenges/forensics/Galvanised Square Steel/challenge.yml
@@ -21,6 +21,6 @@ Link: https://drive.google.com/drive/folders/1y1I2ZwivgcIawIUHOAXC4oNiEJOZi1PZ?u
       description: "Little John is really TERRIBLE at hiding his tracks. It's not helping his case that he loves to use the command line."
       requirements: null
     - cost: 100
-      description: "Little John LOVES fragmented files. He also loves naming his files practically."
-    - cost: 250
-      description: "Little John doesn't know how to encrypt passwords for his accounts! Pray he doesn't get his password cracked."
+      description: " Little John LOVES fragmented files. He also loves naming his files practically, something like... hmm... partone? parttwo? no?"
+    - cost: 200
+      description: "Little John doesn't know how to use secure passwords for his accounts! Pray he doesn't get his password cracked."
