fix(misc): fixed python

--- a/challenges/misc/some sums/service/Dockerfile
+++ b/challenges/misc/some sums/service/Dockerfile
@@ -15,6 +15,9 @@ RUN chown -R ctf:ctf /challenge && chmod -R 770 /challenge
 RUN chown -R root:ctf /challenge && \
   chmod -R 750 /challenge
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 CMD ["/usr/sbin/xinetd", "-dontfork"]
 
 EXPOSE 1337
